--- a/DwarfFightClub.CSharp.csproj
+++ b/DwarfFightClub.CSharp.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AxeScript.cs" />
     <Compile Include="Assets\Scripts\LifeController.cs" />
+    <Compile Include="Assets\Scripts\PineappleRotator.cs" />
     <Compile Include="Assets\Scripts\PlayerAttacker.cs" />
     <Compile Include="Assets\Scripts\PlayerMover.cs" />
     <Compile Include="Assets\Scripts\Rotator.cs" />
