--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,11 +50,13 @@
      <Compile Include="Assets\GameManager.cs" />
      <Compile Include="Assets\Scripts\AxeScript.cs" />
      <Compile Include="Assets\Scripts\DestroyAfterTime.cs" />
+     <Compile Include="Assets\Scripts\GoblinController.cs" />
      <Compile Include="Assets\Scripts\LifeController.cs" />
      <Compile Include="Assets\Scripts\PineappleRotator.cs" />
      <Compile Include="Assets\Scripts\PlayerAttacker.cs" />
      <Compile Include="Assets\Scripts\PlayerMover.cs" />
      <Compile Include="Assets\Scripts\Rotator.cs" />
+     <Compile Include="Assets\Spawner.cs" />
      <Compile Include="Assets\Tools\Tile Editor\Scripts\Class\ColliderInfo.cs" />
      <Compile Include="Assets\Tools\Tile Editor\Scripts\Class\CollisionType.cs" />
      <Compile Include="Assets\Tools\Tile Editor\Scripts\Class\Tile.cs" />
