menu + primitive game manager.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,8 @@
      <Compile Include="Assets\ChangeValueAndColor.cs" />
      <Compile Include="Assets\GOGenerator.cs" />
      <Compile Include="Assets\GameManager.cs" />
+     <Compile Include="Assets\ImageSelector.cs" />
+     <Compile Include="Assets\PlayerSpawner.cs" />
      <Compile Include="Assets\Scripts\AxeScript.cs" />
      <Compile Include="Assets\Scripts\DestroyAfterTime.cs" />
      <Compile Include="Assets\Scripts\GoblinController.cs" />
