--- a/DwarfFightClub.CSharp.csproj
+++ b/DwarfFightClub.CSharp.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Assets\ChangeValueAndColor.cs" />
     <Compile Include="Assets\GOGenerator.cs" />
     <Compile Include="Assets\GameManager.cs" />
+    <Compile Include="Assets\ImageSelector.cs" />
+    <Compile Include="Assets\PlayerSpawner.cs" />
     <Compile Include="Assets\Scripts\AxeScript.cs" />
     <Compile Include="Assets\Scripts\DestroyAfterTime.cs" />
     <Compile Include="Assets\Scripts\GoblinController.cs" />
@@ -79,6 +81,7 @@
     <Compile Include="Assets\Scripts\PlayerAttacker.cs" />
     <Compile Include="Assets\Scripts\PlayerMover.cs" />
     <Compile Include="Assets\Scripts\Rotator.cs" />
+    <Compile Include="Assets\Spawner.cs" />
     <Compile Include="Assets\Tools\Tile Editor\Scripts\Class\ColliderInfo.cs" />
     <Compile Include="Assets\Tools\Tile Editor\Scripts\Class\CollisionType.cs" />
     <Compile Include="Assets\Tools\Tile Editor\Scripts\Class\Tile.cs" />
