--- a/DwarfFightClub.CSharp.csproj
+++ b/DwarfFightClub.CSharp.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Assets\GOGenerator.cs" />
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\ImageSelector.cs" />
+    <Compile Include="Assets\LevelSelector.cs" />
+    <Compile Include="Assets\PlayerCardShower.cs" />
     <Compile Include="Assets\PlayerSpawner.cs" />
     <Compile Include="Assets\Scripts\AxeScript.cs" />
     <Compile Include="Assets\Scripts\DestroyAfterTime.cs" />
